# project

./: .gitignore  README.md  test.txt
.devcontainer/: devcontainer.json
book/: 2-10shareMem.cpp  2-11signal.cpp  2-13-1.cpp  2-13-2.cpp  2-14-2.cpp  2-14-3.cpp  CMakeLists.txt  book.cpp  book1.cpp  book3.cpp  ftpclient.cpp
idc/c/: crtsurfdata.cpp  crtsurfdata1  crtsurfdata3  crtsurfdata4  crtsurfdata5  makefile  start.sh
idc1/: README.md
idc1/c/: CMakeLists.txt  crtsurfdata.cpp  crtsurfdata1  crtsurfdata1.cpp  crtsurfdata2  crtsurfdata2.cpp  crtsurfdata3.cpp  crtsurfdata4.cpp  crtsurfdata5.cpp  killall.sh  makefile  obtcodetodb  obtmindtodb
idc1/c/procctl/: makefile  procctl.cpp
public/db/mysql/: createtable.cpp  inserttable.cpp  makefile  testconnet.c  updatetable.cpp
tools1/c/: makefile  procctl.cpp
